# avelang

./: CMakeLists.txt
benchmark/attention/: bench_flash_attn_amdgpu.py
benchmark/moe/: bench_fused_moe_blockscale_fp8.py
docs/content/tutorials/: 01-axpy.md  03-intrinsics.md
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  invariant_slice.cc  invariant_slice.h  invariant_z3.cc  invariant_z3.h  late_validate_invariant_tags_pass.cc  late_validate_invariant_tags_pass.h  validate_invariant_tags_pass.cc  validate_invariant_tags_pass.h
lib/Dialect/AveLang/IR/: AveLangMemRefOps.td  AveLangOps.cc  AveLangOps.h  AveLangOps.td
lib/Dialect/AveLang/Transforms/: CMakeLists.txt  cleanup_memref_view_cast_pass.cc  cleanup_memref_view_cast_pass.h  lower_ave_lang_to_memref_pass.cc  lower_gpuop_to_intrinsics_pass.cc  memref_byte_size_utils.h
lib/Driver/: driver.cc  driver.h
lib/IR/: builtin_module.cc  builtin_module.h  expr_generator.cc  function_generator.cc  mlir_generator_test.cc
lib/IR/Intrinsics/: amdgpu_intrinsics.mlir  amdgpu_mfma_signatures.h  amdgpu_module.cc
python/avelang/: __init__.py  invariant.py  knobs.py
python/avelang/backends/amdgpu/: compiler.py
python/avelang/compiler/: code_generator.py
python/avelang/language/: __init__.py  amdgpu.py  core.py  invariant.py
python/avelang/runtime/: jit.py
python/avelang_kernels/: __init__.py  flash_attn.py  fused_moe.py
python/src/: avelang_bindings.cc
test/examples/attention/amdgpu/: test_flash_attn_amdgpu.py
test/examples/moe/amdgpu/: test_fused_moe_blockscale_fp8.py
test/primitives/jit/: test_invariant_tags.py  test_tensor_returns.py  test_vector_fma.py
test/primitives/memory/: test_amdgpu_atomic_add.py  test_amdgpu_buffer_ops.py  test_shared_memory.py
tools/: dump_assembly.py
